# MarketDataPipeline

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_utils.h  counter_bench.cpp  pingpong_bench.cpp
experiments/: CMakeLists.txt  broken_aba.cpp  cas_spinlock.cpp  move_semantics.cpp  unique_ptr.cpp
notes/: Benchmark_Findings.md  C++_Memory_Model_&_Atomics.md  Counter_Benchmark_results.md  HFT_Study_Schedule.csv  TODO.md  template.cpp
notes/.obsidian/: community-plugins.json  workspace.json
notes/Flashcards/: CAS_ABA.md  Memory_Orders.md
